# demhack7_vox-harbor

./: .dockerigonre  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
docs/: FastAPI - Swagger UI.html
tests/: controller_test.py  db_test.py  fixtures.py  junk.py  shard_test.py  testing_data.py  utils.py
tests/testing_data/: comments.json  messages.json  user.json  user_info.json
vox_harbor/: cli.py
vox_harbor/big_bot/: bots.py  chats.py  configs.py  exceptions.py  handlers.py  main.py  posts.py  structures.py  tasks.py
vox_harbor/big_bot/services/: controller.py  main.py  models.py  shard.py
vox_harbor/common/: config.py  db_utils.py  exceptions.py  logging_utils.py
vox_harbor/gpt/: main.py
vox_harbor/services/: auto_discover.py  controller.py  shard.py  shard_client.py  utils.py
vox_harbor/sql/: bots.sql  bots_dev_1.sql  broken_bots.sql  chat_updates.sql  chat_updates_mv.sql  chats.sql  check_results.sql  comments.sql  comments_range_mv.sql  discovered_chats.sql  logs.sql  new_posts_mv.sql  post.sql  testing_data.sql  users.sql
vox_harbor/sql/junk/: run.sql  saved.sql  table_fields.sql  test_broken_bots.sql
vox_harbor/utils/: sampler.py
