[tool.poetry]
name = "vox-harbor"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.scripts]
vh = 'vox_harbor.cli:main'


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pyrogram = "^2.0.106"
cachetools = "^5.3.1"
asynch = "^0.2.2"
aiolimiter = "^1.1.0"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.0"
coverage = "^7.3.1"
pydantic-settings = "^2.0.3"
fire = "^0.5.0"


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ['smoke']
addopts = "-v"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
omit = ["tests/*", "__init__.py"]

[tool.coverage.report]
exclude_also = ["raise NotImplementedError"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
